# chili-renderer-gl

./: .gitignore  CMakeLists.txt  README.md
src/: Colors.h  FrameTimer.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  IndexedLineList.h  Mat.h  Mat2.h  Mat3.h  PreClipScreenTransformer.h  Shader.h  Surface.cpp  Surface.h  Vec3.h  Vec4.h  main.cpp
src/DataStructures/: IndexedList.h  Mat.h  TexVertex.h  Triangle.h  Vec2.h  Vec3.h  Vec4.h
src/Effects/: DefaultGeometryShader.h  DefaultVertexShader.h  GeometryFlatEffect.h  GouraudEffect.h  GouraudPointEffect.h  PhongPointEffect.h  SolidEffect.h  SolidGeometryEffect.h  SpecularPhongPointEffect.h  TextureEffect.h  VertexColorEffect.h  VertexFlatEffect.h  VertexPositionColorEffect.h  WaveVertexTextureEffect.h
src/HardwareRender/: Colors.h  Graphics.cpp  Graphics.h  Pipeline.h  Surface.cpp
src/Render/: Graphics.cpp  Graphics.h  NDCScreenTransformer.h  Pipeline.h  Surface.cpp  Surface.h  ZBuffer.h
src/Scenes/: ConHexScene.h  ConHexWireScene.h  CubeFlagIndependentScene.h  CubeOrderScene.h  CubeSkinnedScene.h  CubeSolidGeometryScene.h  CubeSolidScene.h  CubeVertexColorScene.h  CubeVertexPositionColorScene.h  DoubleCubeScene.h  GeometryFlatScene.h  GouraudPointScene.h  GouraudScene.h  PhongPointScene.h  Scene.h  SolidCubeScene.h  SpecularPhongPointScene.h  TexCubeScene.h  VertexWaveScene.h  XMutualScene.h
src/Shapes/: ConcaveHexahedron.h  Cube.h  CubeSkinned.h  Plane.h  Sphere.h  TestTriangle.h  XQuads.h
src/Widgets/: ChiliMath.h  Controller.cpp  Controller.h  CppFeatureTester.h  FrameTimer.cpp  Keyboard.cpp  Keyboard.h  Shader.h
